[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Game/returnToTitle.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Title/Buttons/magic_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Audio/control/no.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/control/yes.wav" type="AudioStream" id=4]

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 369.0
margin_top = 258.0
margin_right = 654.0
margin_bottom = 318.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "New Game Scene"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 285.0
margin_bottom = 60.0
text = "Back"

[node name="AudioNo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="AudioYes" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="finished" from="AudioNo" to="." method="_on_AudioNo_finished"]
[connection signal="finished" from="AudioYes" to="." method="_on_AudioNo_finished"]
